Cooked meat can be glazed with honey/syrup
Gelatin-making process more complicated
RenderIngredients now uses selectiveElements to cut down on files
Soulstorm brew integrated with Alchemy
Instead of simply 'cooking' certain liquids (such as sap > syrup or water > salt) , they are now actual simmer recipes 

1.6.6

Soy milk can be used to make tofu
Clarified vegetable juice/broth added?
Sausage can be used in soup & porridge
Fried mushrooms can be used in meals
Salad dressing added (vinegar + egg white + oil)
Saltmaking process revamped (check Cooking 101 for details) - DONE!!!

Bugfixes:
Broth nutrition values fixed in bread, fruit bread, dumplings, muffins, and soft bread - DONE!!!
Part-baked balls/mushroom/vegetable/stuffed pepper handbook crashing fixed - DONE!!!
Handbook no longer says you can put syrups & toppings on regular bread - DONE!!!
Trail mix handbook entry moved to Cooking 102 - DONE!!!
Cooking 101 & 102 alphabetized  - DONE!!!
Salted peanut candy requires correct amount of peanut paste - DONE!!!

1.6.5
Dehydrated fruits cure into the same amount of dried fruits (for real this time)
Handbook mentions that 1 L of broth is needed for meals
Handbook mentions acorn coffee recipe in Cooking 104
Non-vanilla fruit works in barrels
Vinegar barrel recipe re-added, you can turn berries into vinegar
Soft dough + 1 chopped pumpkin makes muffins, not dumplings
Fixed crashing the game in handbook for part baked tree-growing mushrooms (thanks to DoctorVanGogh)
Add simmering recipes for primitive survival meat types (thanks to DoctorVanGogh)
Primitive Survival crab meat can be used to make fish broth (thanks to DoctorVanGogh)
Cooked crab meat from Primtive Survival can be added to salads (thanks to DoctorVanGogh)
Honey pressing slightly tweaked (thanks to DoctorVanGogh)
Handbook crashing fixed! (thanks to DoctorVanGogh)
Snake meat included in salads
Fish broth renamed to Seafood broth
Seafood broth can be used in porridge as a topping