@@ -62,10 +62,6 @@
       <HintPath>$(AppData)\Vintagestory\VintagestoryLib.dll</HintPath>
       <Private>false</Private>
     </Reference>
-    <Reference Include="VSBuildLib">
-      <HintPath>$(AppData)\Vintagestory\VSBuildLib.dll</HintPath>
-      <Private>false</Private>
-    </Reference>
     <Reference Include="VSCreativeMod">
       <HintPath>$(AppData)\Vintagestory\Mods\VSCreativeMod.dll</HintPath>
       <Private>false</Private>
