@@ -9219,4 +9219,21 @@
     "item-saltcrystal-damp": "Salt crystal (damp)",
     "item-saltcrystal-dry": "Salt crystal (dry)",
 
+    "game:pie-single-egg-chicken-boiled-raw": "Quiche (raw)",
+    "game:pie-single-egg-chicken-boiled-partbaked": "Quiche (part-baked)",
+    "game:pie-single-egg-chicken-boiled-perfect": "Quiche",
+    "game:pie-single-egg-chicken-boiled-charred": "Quiche (charred)",
+    
+    "pie-single-moreanimals:egg-pheasant-boiled-raw": "Quiche (raw)",
+    "pie-single-moreanimals:egg-pheasant-boiled-partbaked": "Quiche (part-baked)",
+    "pie-single-moreanimals:egg-pheasant-boiled-perfect": "Quiche",
+    "pie-single-moreanimals:egg-pheasant-boiled-charred": "Quiche (charred)",
+    "pie-single-moreanimals:egg-goldenpheasant-boiled-raw": "Quiche (raw)",
+    "pie-single-moreanimals:egg-goldenpheasant-boiled-partbaked": "Quiche (part-baked)",
+    "pie-single-moreanimals:egg-goldenpheasant-boiled-perfect": "Quiche",
+    "pie-single-moreanimals:egg-goldenpheasant-boiled-charred": "Quiche (charred)",
+    "pie-single-moreanimals:egg-capercaillie-boiled-raw": "Quiche (raw)",
+    "pie-single-moreanimals:egg-capercaillie-boiled-partbaked": "Quiche (part-baked)",
+    "pie-single-moreanimals:egg-capercaillie-boiled-perfect": "Quiche",
+    "pie-single-moreanimals:egg-capercaillie-boiled-charred": "Quiche (charred)",
 }   
