@@ -35,7 +35,8 @@ Instead of simply 'cooking' certain liquids (such as sap > syrup or water > salt
 1.6.6
 
 Soy milk can be used to make tofu
-Clarified vegetable juice/broth added?
+Clarified broth added
+Egg yolk can be used in meals
 Sausage can be used in soup & porridge
 Fried mushrooms can be used in meals
 Salad dressing added (vinegar + egg white + oil)
@@ -48,6 +49,7 @@ Handbook no longer says you can put syrups & toppings on regular bread - DONE!!!
 Trail mix handbook entry moved to Cooking 102 - DONE!!!
 Cooking 101 & 102 alphabetized  - DONE!!!
 Salted peanut candy requires correct amount of peanut paste - DONE!!!
+Boiled and pickled eggs re-added (not sure what happened there)
 
 1.6.5
 Dehydrated fruits cure into the same amount of dried fruits (for real this time)
